# GaymesAssistantBot

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
.github/workflows/: cmake.yml  pylint.yml
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  main.rs
