[package]
name = "GaymesAssistantBot"
authors = ["Vladislav Smirnov <beluckydaf@gmail.com>"]
version = "0.1.0"
edition = "2018"


[dependencies]
teloxide = { version = "0.5", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }